<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.querydsl</groupId>
  <artifactId>querydsl-root</artifactId>
  <version>4.0.0.BUILD-SNAPSHOT</version>
  <name>Querydsl</name>
  <description>parent project for Querydsl modules</description>
  <url>${project.homepage}</url>
  
  <parent>
    <groupId>com.mysema.home</groupId>
    <artifactId>mysema-source</artifactId>
    <version>0.3.1</version>
  </parent>
  
  <packaging>pom</packaging>

  <inceptionYear>2007</inceptionYear>
  
  <properties>    
    <failIfNoTests>false</failIfNoTests>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.homepage>http://www.querydsl.com</project.homepage>
    <project.githubpage>http://github.com/querydsl/querydsl</project.githubpage>
    <project.checkout>scm:git:git@github.com:querydsl/querydsl.git</project.checkout>
    
    <!-- deps -->
    <derby.version>10.10.1.1</derby.version>
    <hsqldb.version>2.3.1</hsqldb.version>
    <h2.version>1.4.178</h2.version>
    <postgresql.version>9.3-1101-jdbc41</postgresql.version>
    <oracle.version>11.1.0.7.0</oracle.version>
    <mysql.version>5.1.30</mysql.version>
    <jtds.version>1.3.1</jtds.version>
    <cubrid.version>8.4.0</cubrid.version>
    <sqlite.version>3.7.2</sqlite.version>
    <teradata.version>13.10.00.35</teradata.version>
    <firebird.version>2.2.5</firebird.version>

    <guava.version>18.0</guava.version>
    <codegen.version>0.6.5</codegen.version>
    <mysema.lang.version>0.2.4</mysema.lang.version>
    <cglib.version>2.2.2</cglib.version>    
    <findbugs.version>1.3.2</findbugs.version>
    <slf4j.version>1.6.1</slf4j.version>
    
    <!-- Import-Package definitions for maven-bundle-plugin -->
    <osgi.import.package.root>
      com.google.common.*;version=${@},
      *
    </osgi.import.package.root>
    <osgi.import.package>${osgi.import.package.root}</osgi.import.package>
  </properties>
     
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8.1</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>javax.servlet</groupId>
          <artifactId>servlet-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymock</artifactId>
      <version>3.0</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>cglib</groupId>
          <artifactId>cglib-nodep</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.reflections</groupId>
      <artifactId>reflections</artifactId>
      <version>0.9.9</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-log4j12</artifactId>
        <version>${slf4j.version}</version>
        <scope>provided</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <scm>
    <connection>${project.checkout}</connection>
    <developerConnection>${project.checkout}</developerConnection>
    <url>${project.githubpage}</url>
  </scm>
  
  <developers>
    <developer>
      <id>timowest</id>
      <name>Timo Westkämper</name>
      <organization>Mysema Ltd</organization>
      <roles>
        <role>Project Manager</role>
        <role>Architect</role>
      </roles>
    </developer>
    <developer>
      <id>ssaarela</id>
      <name>Samppa Saarela</name>
      <organization>Mysema Ltd</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>ponzao</id>
      <name>Vesa Marttila</name>
      <organization>Mysema Ltd</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>mangolas</id>
      <name>Lassi Immonen</name>
      <organization>Mysema Ltd</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>Shredder121</id>
      <name>Ruben Dijkstra</name>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>LICENSE.txt</url>
    </license>
  </licenses>
  
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>2.4</version>
        </plugin>
        <plugin>
          <groupId>com.mysema.maven</groupId>
          <artifactId>apt-maven-plugin</artifactId>
          <version>1.1.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.16</version>
        </plugin>
        <plugin>
          <groupId>org.apache.felix</groupId>
          <artifactId>maven-bundle-plugin</artifactId>
          <version>2.4.0</version>
          <executions>
            <execution>
              <id>bundle-manifest</id>
              <phase>process-classes</phase>
              <goals>
                <goal>manifest</goal>
              </goals>
              <inherited>true</inherited>
              <configuration>
                <instructions>
                  <Import-Package>
                    ${osgi.import.package}
                  </Import-Package>
                  <Export-Package>com.mysema.*</Export-Package>
                </instructions>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>      
    </pluginManagement>
    
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>1.3.1</version>
        <executions>
          <execution>
            <id>check</id>
            <phase>verify</phase> 
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireBackwardCompatibility implementation="org.semver.enforcer.RequireBackwardCompatibility">
                  <excludes>
                    <exclude>com/mysema/query/jpa/NativeSQLSerializer</exclude>
                    <exclude>com/mysema/query/sql/types/ArrayType</exclude>
                  </excludes>
                  <compatibilityType>BACKWARD_COMPATIBLE_USER</compatibilityType>
                  <dumpDetails>true</dumpDetails>
                  <publicOnly>true</publicOnly>
                </requireBackwardCompatibility>
              </rules>
            </configuration>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>org.semver</groupId>
            <artifactId>enforcer-rule</artifactId>
            <version>0.9.27</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>       
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <descriptors>
            <descriptor>../querydsl-root/src/main/assembly.xml</descriptor>
          </descriptors>
          <outputDirectory>../querydsl-root/target/dist</outputDirectory>
        </configuration>
      </plugin>     
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9.1</version>
        <configuration>
          <outputDirectory>${project.build.directory}/dist/apidocs</outputDirectory>
          <reportOutputDirectory>${project.build.directory}/dist/apidocs</reportOutputDirectory>
          <groups>
            <group>
              <title>Core</title>
              <packages>com.querydsl.core*</packages>
            </group>
            <group>
              <title>APT</title>
              <packages>com.querydsl.apt*</packages>
            </group>
            <group>
              <title>Spatial</title>
              <packages>com.querydsl.spatial*</packages>
            </group>
            <group>
              <title>Collections</title>
              <packages>com.querydsl.collections*</packages>
            </group>
            <group>
              <title>JPA</title>
              <packages>com.querydsl.jpa*</packages>
            </group>
            <group>
              <title>JDO</title>
              <packages>com.querydsl.jdo*</packages>
            </group>
            <group>
              <title>SQL</title>
              <packages>com.querydsl.sql*</packages>
            </group>
            <group>
              <title>Spatial</title>
              <packages>com.querydsl.spatial*</packages>
            </group>
            <group>
              <title>Lucene</title>
              <packages>com.querydsl.lucene3:com.querydsl.lucene4</packages>
            </group>
            <group>
              <title>Hibernate Search</title>
              <packages>com.querydsl.search</packages>
            </group>
            <group>
              <title>Mongodb</title>
              <packages>com.querydsl.mongodb*</packages>
            </group>            
          </groups>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.mysema.maven</groupId>
        <artifactId>maven-version-plugin</artifactId>
        <version>0.1.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <targetJdk>1.6</targetJdk>   
          <includeTests>true</includeTests>     
        </configuration>
      </plugin>      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>            
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>  
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <useDefaultManifestFile>true</useDefaultManifestFile>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
          <excludedGroups>com.querydsl.core.testutil.ExternalDB</excludedGroups>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.surefire</groupId>
            <artifactId>surefire-junit47</artifactId>
            <version>2.16</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>querydsl</id>
      <url>http://www.querydsl.com/maven</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>com.springsource.repository.bundles.release</id>
      <url>http://repository.springsource.com/maven/bundles/release</url>
    </pluginRepository>
    <pluginRepository>
      <id>com.springsource.repository.bundles.external</id>
      <url>http://repository.springsource.com/maven/bundles/external</url>
    </pluginRepository>
  </pluginRepositories>
 
  <profiles>
    <profile>
      <id>all</id>
      <activation><activeByDefault>true</activeByDefault></activation>
      <modules>
        <module>../querydsl-core</module>
        <module>../querydsl-codegen</module>
        <module>../querydsl-spatial</module>
        <module>../querydsl-apt</module> 
        <module>../querydsl-collections</module>           
        <module>../querydsl-sql</module>
        <module>../querydsl-sql-codegen</module>
        <module>../querydsl-sql-spring</module>
        <module>../querydsl-maven-plugin</module>
        <module>../querydsl-jpa</module>    
        <module>../querydsl-jpa-codegen</module>
        <module>../querydsl-jdo</module>
                
        <!-- Lucene related -->
        <module>../querydsl-lucene3</module>
        <module>../querydsl-lucene4</module>
        <module>../querydsl-hibernate-search</module>
        
        <!-- NoSQL -->
        <module>../querydsl-mongodb</module>
        
        <!-- Languages -->        
        <module>../querydsl-scala</module>
      </modules>
    </profile>
    
    <profile>
      <id>hibernate-search</id>
      <modules>
        <module>../querydsl-core</module>
        <module>../querydsl-codegen</module>
        <module>../querydsl-lucene3</module>  
        <module>../querydsl-hibernate-search</module>        
      </modules>
    </profile>   

    <profile>
      <id>jpa</id>
      <modules>
        <module>../querydsl-core</module>
        <module>../querydsl-codegen</module>
        <module>../querydsl-spatial</module>
        <module>../querydsl-apt</module> 
        <module>../querydsl-sql</module>
        <module>../querydsl-sql-codegen</module>
        <module>../querydsl-sql-spring</module>
        <module>../querydsl-maven-plugin</module>        
        <module>../querydsl-jpa</module>        
        <module>../querydsl-jpa-codegen</module>
      </modules>
    </profile>    
    
    <profile>
      <id>jdo</id>
      <modules>
        <module>../querydsl-core</module>
        <module>../querydsl-codegen</module>
        <module>../querydsl-spatial</module>
        <module>../querydsl-apt</module> 
        <module>../querydsl-sql</module>
        <module>../querydsl-sql-codegen</module>
        <module>../querydsl-sql-spring</module>
        <module>../querydsl-maven-plugin</module>        
        <module>../querydsl-jdo</module>
      </modules>
    </profile>        
    
    <profile>
      <id>lucene</id>
      <modules>
        <module>../querydsl-core</module>
        <module>../querydsl-codegen</module>
        <module>../querydsl-apt</module> 
        <module>../querydsl-lucene3</module>         
        <module>../querydsl-lucene4</module>
      </modules>
    </profile>     
    
    <profile>
      <id>mongodb</id>
      <modules>
        <module>../querydsl-core</module>
        <module>../querydsl-codegen</module>
        <module>../querydsl-apt</module> 
        <module>../querydsl-mongodb</module>        
      </modules>
    </profile>
    
    <profile>
      <id>sql</id>
      <modules>
        <module>../querydsl-core</module>
        <module>../querydsl-codegen</module>
        <module>../querydsl-spatial</module>
        <module>../querydsl-sql</module>
        <module>../querydsl-sql-codegen</module>
        <module>../querydsl-sql-spring</module>
        <module>../querydsl-maven-plugin</module>        
      </modules>
    </profile>        
  
    <profile>
      <id>collections</id>
      <modules>
        <module>../querydsl-core</module>
        <module>../querydsl-codegen</module>
        <module>../querydsl-apt</module>
        <module>../querydsl-collections</module>
      </modules>
    </profile>
    
    <profile>
      <id>jenkins</id>      
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>          
              <excludedGroups>com.querydsl.core.testutil.Performance</excludedGroups>
              <excludes>
                <exclude>**/*$*</exclude>
                <exclude>**/DB2*SuiteTest.java</exclude>
                <exclude>**/MSSQL*SuiteTest.java</exclude>
                <exclude>**/Teradata*SuiteTest.java</exclude>
              </excludes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>travis</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <excludedGroups>com.querydsl.core.testutil.Performance</excludedGroups>
              <excludes>
                <exclude>**/*$*</exclude>
                <exclude>**/DB2*SuiteTest.java</exclude>
                <exclude>**/ExportOracleTest.java</exclude>
                <exclude>**/ExportTeradataTest.java</exclude>
                <exclude>**/Oracle*SuiteTest.java</exclude>
                <exclude>**/OracleWithQuotingTest.java</exclude> 
                <exclude>**/MSSQL*SuiteTest.java</exclude>
                <exclude>**/Teradata*SuiteTest.java</exclude>
              </excludes>
              <properties>
                <property>
                  <name>listener</name>
                  <value>com.querydsl.core.testutil.TravisFoldListener</value>
                </property>
              </properties>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>


  </profiles>
  
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9.1</version>
        <configuration>
          <detectJavaApiLink>true</detectJavaApiLink>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>junit-report-maven-plugin</artifactId>
        <version>devel</version>
        <configuration>
          <testFailureIgnore>true</testFailureIgnore>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <aggregate>true</aggregate>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
  
</project>
